k8's stuffs/project_deployment_templates/Ingress-Kong/project_ready_template/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-app
  namespace: employee-info
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: 'false'
    #konghq.com/plugins: kong-ratelimit
    konghq.com/methods: GET, POST
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
